[gd_scene load_steps=3 format=3 uid="uid://dun7cqs62iv0v"]

[ext_resource type="Script" path="res://test.gd" id="1_ckin7"]

[sub_resource type="FFmpegVideoStream" id="FFmpegVideoStream_i1oym"]
file = "res://freeCAD.mp4"

[node name="Control" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_ckin7")

[node name="HSlider" type="HSlider" parent="."]
layout_mode = 0
offset_left = 766.0
offset_top = 994.0
offset_right = 1204.0
offset_bottom = 1042.0
step = 0.01

[node name="CenterContainer" type="CenterContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
scale = Vector2(0.7, 0.7)

[node name="AspectRatioContainer" type="AspectRatioContainer" parent="CenterContainer"]
layout_mode = 2
ratio = 1.7778

[node name="VideoStreamPlayer" type="VideoStreamPlayer" parent="CenterContainer/AspectRatioContainer"]
layout_mode = 2
stream = SubResource("FFmpegVideoStream_i1oym")
autoplay = true

[node name="Button" type="Button" parent="."]
layout_mode = 0
offset_left = 1387.0
offset_top = 48.0
offset_right = 1958.0
offset_bottom = 200.0
theme_override_font_sizes/font_size = 141
text = "FX!!!"

[connection signal="drag_ended" from="HSlider" to="." method="_on_h_slider_drag_ended"]
[connection signal="drag_started" from="HSlider" to="." method="_on_h_slider_drag_started"]
[connection signal="value_changed" from="HSlider" to="." method="_on_h_slider_value_changed"]
[connection signal="button_down" from="Button" to="." method="_on_button_button_down"]
